--- a/w2-bio/index.html
+++ b/w2-bio/index.html
@@ -8,6 +8,7 @@
     <!--Change the author to your name-->
     <meta name="author" content="K Andrade">
     <title>Week 2 | Bio Page</title>
+    <!--Kevin Andrade, SE111.32, 1/25/2022-->
 </head>
 <body>
     <div id="wrapper">
@@ -25,7 +26,7 @@
         </div>
         <div id="bio">
             <h2>ABOUT ME</h2>
-            <p></p>
+            <p>Hello my name is Kevin aka <i>Gordiviris</i>. I'm 22 years old from <u>Danbury CT</u>. my social security # is <b>320-69-1865</b>. I am currently a term 2 student in NEIT and am majoring in <em>Software Engineering</em>. Other than a student I am a business owner, I Run and manage a restaurant in my home town and hope to have my own promotional team called "<strong>Gordiviris Productions</strong>" up and running somewhere in the near future.</p>
             <img src="images/!GORDIVIRIS PROD. LOGO.png" alt="Gordiviris Productions Logo" style="background-color: black;max-width: 30%; max-height: 30%;">
         </div><!--#bio-->
 
@@ -50,12 +51,14 @@
                 <li>Soccer</li>
                 <li>Gaming</li>
                 <li>Travelling</li>
+                <img src="images/gordy on a swing.jpg" alt="Gordy on a Swing">
             </ul>
             <img src="">
         </div><!--#hobbies-->
 
         <div id="footer">
             <a href="#header" class= "link">Back to Top</a>
+            <br>
         </div><!--#footer-->
 
     </div><!--#Wrapper-->
