--- a/w2-bio/index.html
+++ b/w2-bio/index.html
@@ -59,6 +59,7 @@
         <div id="footer">
             <a href="#header" class= "link">Back to Top</a>
             <br>
+            <img src="images/Screenshot.png" alt="Validation Screenshot">
         </div><!--#footer-->
 
     </div><!--#Wrapper-->
